--- a/web-frontend/modules/core/assets/scss/components/all.scss
+++ b/web-frontend/modules/core/assets/scss/components/all.scss
@@ -124,3 +124,5 @@
 @import 'integrations/all';
 @import 'editable';
 @import 'notification_panel';
+@import 'formula_input_field';
+@import 'get_formula_component';
