--- a/web-frontend/modules/core/assets/scss/components/formula_input_field.scss
+++ b/web-frontend/modules/core/assets/scss/components/formula_input_field.scss
@@ -1,6 +1,12 @@
-.formula_input_field__editor {
+.formula-input-field__paragraph {
   display: flex;
   align-items: center;
+  color: black;
+}
+
+.ProseMirror p.is-editor-empty:first-child::before {
+  position: absolute !important;
+  height: unset !important;
 }
 
 .formula_input_field--focused {
