--- a/web-frontend/modules/core/assets/scss/components/get_formula_component.scss
+++ b/web-frontend/modules/core/assets/scss/components/get_formula_component.scss
@@ -1,4 +1,5 @@
 .get-formula-component {
+  display: inline-block;
   padding: 3px 8px;
   background-color: $color-neutral-100;
   font-size: 12px;
