Add loading state for data source creation

--- a/web-frontend/modules/core/assets/scss/components/button.scss
+++ b/web-frontend/modules/core/assets/scss/components/button.scss
@@ -109,9 +109,13 @@
   &:focus,
   &:active,
   &.button--loading {
-    color: $color-neutral-900;
     box-shadow: none;
     background: none;
+  }
+
+  &:hover,
+  &:focus {
+    color: $color-neutral-900;
   }
 
   &.button--loading {
