--- a/web-frontend/modules/core/assets/scss/components/builder/all.scss
+++ b/web-frontend/modules/core/assets/scss/components/builder/all.scss
@@ -20,4 +20,4 @@
 @import 'public_page';
 @import 'data_source_context';
 @import 'data_source_form';
-@import 'fake_browser_bar';
+@import 'preview_navigation_bar';
