--- a/backend/src/baserow/core/templates/baserow/core/notifications_summary.html
+++ b/backend/src/baserow/core/templates/baserow/core/notifications_summary.html
@@ -145,7 +145,7 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                        <div style="font-family:Montserrat;font-size:22px;font-weight:700;line-height:1;text-align:left;color:#062E47;">{% blocktrans trimmed with count as count %} You have {{ count }} new notifications in Baserow. {% endblocktrans %}</div>
+                        <div style="font-family:Montserrat;font-size:22px;font-weight:700;line-height:1;text-align:left;color:#062E47;">{% blocktrans trimmed with total_count as count %} You have {{ count }} new notifications in Baserow. {% endblocktrans %}</div>
                       </td>
                     </tr>
                     <tr>
@@ -186,6 +186,15 @@
                       </td>
                     </tr>
                     <!-- htmlmin:ignore -->{% endfor %}
+                    <!-- htmlmin:ignore -->
+                    <!-- htmlmin:ignore -->{% if more_available_count %}
+                    <!-- htmlmin:ignore -->
+                    <tr>
+                      <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                        <div style="font-family:Open Sans;font-size:12px;line-height:1;text-align:left;color:#646b75;">{% blocktrans trimmed with more_available_count as count %} Plus {{ count }} more notifications. {% endblocktrans %}</div>
+                      </td>
+                    </tr>
+                    <!-- htmlmin:ignore -->{% endif %}
                     <!-- htmlmin:ignore -->
                     <tr>
                       <td style="font-size:0px;word-break:break-word;">
