--- a/web-frontend/modules/core/assets/scss/default.scss
+++ b/web-frontend/modules/core/assets/scss/default.scss
@@ -26,5 +26,6 @@
 @import 'components/radio';
 @import 'components/radio_group';
 @import 'components/checkbox';
+@import 'components/switch';
 @import '_vendors'; // TODO: to remove
 @import '_helpers';
