enabled auto max width on views and workspaces context

--- a/web-frontend/modules/core/assets/scss/components/all.scss
+++ b/web-frontend/modules/core/assets/scss/components/all.scss
@@ -50,8 +50,7 @@
 @import 'views/gallery';
 @import 'views/sharing';
 @import 'views/public';
-@import 'views/view_ownership_select';
-@import 'views/views_context';
+@import 'view_ownership_select';
 @import 'decorator/list';
 @import 'decorator/item';
 @import 'decorator/context';
