--- a/web-frontend/modules/core/assets/scss/default.scss
+++ b/web-frontend/modules/core/assets/scss/default.scss
@@ -27,5 +27,6 @@
 @import 'components/radio_group';
 @import 'components/checkbox';
 @import 'components/switch';
+@import 'components/tabs';
 @import '_vendors'; // TODO: to remove
 @import '_helpers';
