--- a/web-frontend/modules/core/assets/scss/default.scss
+++ b/web-frontend/modules/core/assets/scss/default.scss
@@ -28,5 +28,6 @@
 @import 'components/checkbox';
 @import 'components/switch';
 @import 'components/tabs';
+@import 'components/tooltip';
 @import '_vendors'; // TODO: to remove
 @import '_helpers';
