--- a/web-frontend/modules/core/assets/scss/components/builder/add_element_zone.scss
+++ b/web-frontend/modules/core/assets/scss/components/builder/add_element_zone.scss
@@ -15,11 +15,11 @@
   cursor: pointer;
 
   &:hover {
-    color: $color-primary-500;
-    border-color: $color-primary-500;
+    color: $color-blue-500;
+    border-color: $color-blue-500;
 
     .add-element-zone__icon {
-      border-color: $color-primary-500;
+      border-color: $color-blue-500;
     }
   }
 }
