--- a/web-frontend/modules/core/assets/scss/components/get_formula_component.scss
+++ b/web-frontend/modules/core/assets/scss/components/get_formula_component.scss
@@ -1,14 +1,16 @@
 .get-formula-component {
   display: inline-block;
-  padding: 3px 8px;
+  padding: 2px 6px;
   background-color: $color-neutral-100;
   font-size: 12px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 1px;
+  margin-right: 1px;
+  border: 1px solid transparent;
+  border-radius: 3px;
 }
 
 .get-formula-component--selected {
-  border: 1px solid $color-primary-600;
+  border-color: $color-neutral-300;
 }
 
 .get-formula-component__caret {
