Add missing imports

--- a/web-frontend/modules/core/assets/scss/components/all.scss
+++ b/web-frontend/modules/core/assets/scss/components/all.scss
@@ -2,6 +2,9 @@
 @import 'add';
 @import 'avatar';
 @import 'button';
+@import 'button_text';
+@import 'floating_button';
+@import 'icon_button';
 @import 'alert';
 @import 'form';
 @import 'box';
@@ -124,3 +127,4 @@
 @import 'integrations/all';
 @import 'editable';
 @import 'notification_panel';
+@import 'chips';
